# ethny-parasol

./: Cargo.toml  README.md  build_rust.sh  build_solidity.sh
app/: Cargo.toml
app/src/: bin.rs  lib.rs  main_old.rs
bindings/src/: ballot.rs  lib.rs
contracts/script/: Ballot.s.sol
contracts/src/: Ballot.sol
